--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		<input type="submit" value="Cadastrar">
 	</form>
 	<br><br>
-	<img src="brasao-do-ceara.png">
+	<img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1nEtTPf7NGM931HfENmYJuXUovsm7H-ACV9BHDt0&s>
 	<br><br>
-	<img src="logo-ceara-4096.png">
+	<img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSV9zfI7e-ysEiZYEtMDq05kU7fC3D8Cp3Clk6nw0jv&s>
 </body>
 </html>
