--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
 			<option value="integral">Integral</option>
 		</select>
 
-		<input type="submit" value="Cadastrar">
+		<input type="submit" value="Cadastrar" href="img.html">
 	</form>
-	<br><br>
-	<img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1nEtTPf7NGM931HfENmYJuXUovsm7H-ACV9BHDt0&s>
-	<br><br>
-	<img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSV9zfI7e-ysEiZYEtMDq05kU7fC3D8Cp3Clk6nw0jv&s>
 </body>
 </html>
