--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 			<option value="integral">Integral</option>
 		</select>
 
-		<input type="submit" value="Cadastrar" href="img.html">
+		<input type="submit" value="Cadastrar">
+		<button type="button" value="Imagens">Imagens</button>
 	</form>
 </body>
 </html>
