--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</select>
 
 		<input type="submit" value="Cadastrar">
-		<button type="button" value="Imagens">Imagens</button>
+		<button type="button" value="Imagens" href="img.html">Imagens</button>
 	</form>
 </body>
 </html>
